@@ -2,6 +2,8 @@
 
 ** Unreleased
 
+- [[https://github.com/r0man/sablono/issues/141][#141]] Fix =^:inline= hint for elements without attributes.
+
 ** 0.7.6
 
 - [[https://github.com/r0man/sablono/pull/135][#135]] Skip interpretation when using the =:inline= type hint.
